--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=Cajero
+
+server.port=8862
+
+spring.datasource.url=${urlbd}
+spring.datasource.username=${usernamebd}
+spring.datasource.password=${passwordbd}
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
